<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_weight="3"
    tools:context="io.krito.com.rezetopia.fragments.PrivacySettingsFragment">
 <LinearLayout
     android:id="@+id/buttons_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
  <Button
      android:id="@+id/closed_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/closedButtonLabel"
      android:layout_weight="1"
      android:layout_marginStart="10dp"
      />

    <Button
        android:id="@+id/secret_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secretButtonLabel"
        android:layout_weight="1"
        />
    <Button
        android:id="@+id/open_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/openButtonLabel"
        android:layout_weight="1"
        android:layout_marginEnd="10dp"
        />
 </LinearLayout>
    <Button
        android:id="@+id/confirm_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttons_layout"
        android:layout_centerInParent="true"
        android:text="@string/confirm"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_green_btn"
        android:textColor="@color/white"/>
</RelativeLayout>
